--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -111,7 +111,7 @@
     "one-var": [2, "never"],
     "one-var-declaration-per-line": [2, "initializations"],
     "operator-assignment": 2,
-    "operator-linebreak": 2,
+    "operator-linebreak": [2, "after"],
     "padded-blocks": [2, "never"],
     "quote-props": [2, "as-needed"],
     "quotes": 2,
