--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,7 @@
     "no-label-var": 2,
     "no-shadow-restricted-names": 2,
     "no-undef-init": 2,
+    "no-unused-vars": 1,
     "no-use-before-define": 2,
     "callback-return": 2,
     "global-require": 2,
